insert nave + validacion

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ sourceSets {
   main {
     resources {
         srcDirs = ["src/main/resources"]
-        includes = ["**/*.fxml","**/*.png","**/*.properties"]  //Importante para poder abrir una extensión no reconocida
+        includes = ["**/*.fxml","**/*.png","**/*.properties","**/*.css"]  //Importante para poder abrir una extensión no reconocida
     }
   }
 }
